fix spacing on about section

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -185,7 +185,9 @@ footer a {
     color: grey;
 }
 
-
+#about-card {
+  margin-bottom: 10px;
+}
 
 /******************************************
 Angular Material Directives
